# ece-579-alpha-beta-tic-tac-toe

./: AGENTS.md  README.md  pyproject.toml  tictactoe_cli.py
app/: __init__.py
app/configs/: app.yml  cli.yml  container.yml  error.yml  feature.yml  logging.yml
app/domain/: __init__.py  board.py  result.py
app/events/: __init__.py  tictactoe.py
app/mappers/: __init__.py  result.py
app/utils/: __init__.py  alphabeta.py  board_utils.py  minimax.py
docs/guides/domain/: board.md  result.md
docs/guides/events/: tictactoe.md
docs/guides/utils/: alphabeta.md  board_utils.md  minimax.md
trds/: trd-1-utils-board-utils.md  trd-2-utils-minimax.md  trd-3-utils-alphabeta.md  trd-4-domain-tictactoeboard.md  trd-5-domain-result.md  trd-6-events-tictactoe.md  trd-7-configs-docs-release.md
