[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ece-579-alpha-beta-tic-tac-toe"
dynamic = ["version"]
description = "Tic-Tac-Toe solver using Minimax and Alpha-Beta pruning"
requires-python = ">=3.10"
dependencies = [
    "tiferet==2.0.0a6",
]

[tool.setuptools.dynamic]
version = {attr = "app.__version__"}
